k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ivolve-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ivolve-website
  template:
    metadata:
      labels:
        app: ivolve-website
    spec:
      containers:
      - name: ivolve-website
        image: osayaman74/spot:5
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: storage
          mountPath: /app/data 
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: ivolve-website-pvc
