k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ivolve-website-service
spec:
  selector:
    app: ivolve-website
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
