k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ivolve-website-ingress
  labels:
    name: Ivolve-website-ingress
spec:
  rules:
  - host: ivolve-website.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ivolve-website-service
            port: 
              number: 8081
